[package]
name = "collatz_compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
eyre = "0.6.8"
moka = "0.9.4"
tokio = { version = "1.21.1", features = ["full", "tracing"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
